--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -886,85 +886,69 @@ background: rgba(255,255,255,0.8);
   }
 
   .box1 {
-    width: 655px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     padding: 0px;
+  }
+
+  .box2 {
+    width: 100%;
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: auto;
+    z-index: 2;
+    height: 55%;
+    padding: 15px 150px;
+  }
+
+  .box3-descripcion {
+    position: absolute;
+    left: 0%;
+    top: auto;
+    right: 0%;
+    bottom: 0%;
+    z-index: 1;
+    height: 50%;
+    padding: 25px 40px 20px;
   }
 
   .box-iconos, .box-iconos2 {
     display: none;
   }
 
-  .box2 {
-    width: 100%;
-    margin-top: 0px;
-    height: 340px;
-    left: 0px;
-    z-index: 5;
-    right: 0px;
-  }
-
-  .carousel {
-    padding-left: 30%;
-  }
-
-  .carousel-inner {
-    width: 100%;
-  }
-
-  .box2-img-carousel {
-    width: 240px;
-    height: 0px;
-    display: block;
-    max-width: 100%;
-  }
-
   .carousel-indicators {
-    bottom: 0px;
-    left: 53%;
+    height: 5px;
+    margin-top: 180px;
+    text-align: center;
   }
 
   .box3-logo, .box3-logo3 {
-    padding-top: 350px;
-    padding-left: 0px;
-    padding-right: 0px;
+    height: 50px;
+    padding-top: 0px;
+    padding-right: 40px;
+    padding-left: 40px;
     text-align: center;
-  }
-
-  .box3-logo-responsive {
-    padding-top: 340px;
-    padding-left: 0px;
-    padding-right: 0px;
-    text-align: center;
-  }
-
-  .box3-descripcion {
-    width: 100%;
-    height: 100%;
-    left: 0px
   }
 
   .box3-text {
-    padding-left: 20%;
-    padding-right: 20%;
+    height: 150px;
+    padding: 30px;
     text-align: center;
-    line-height: 14px;
+    line-height: 1;
   }
 
-  .box-iconos-responsive {
-    display: block;
-    padding-top: 20px;
+  .box3-text p {
+    padding-bottom: 5px;
   }
 
-  .box-iconos-responsive2 {
-    display: block;
-    padding-top: 5px;
+  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
+    height: 50px;
+    padding: 5px 20px;
+    line-height: 10px;
   }
 
-  .box-iconos-responsive3 {
-    display: block;
-    padding-top: 15px;
-  }
 
 
 }
