--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -892,15 +892,18 @@ background: rgba(255,255,255,0.8);
   }
 
   .box2 {
-    width: 100%;
     position: absolute;
     left: 0%;
     top: 0%;
     right: 0%;
     bottom: auto;
     z-index: 2;
-    height: 55%;
-    padding: 15px 150px;
+    width: 100%;
+    height: 50%;
+    margin-top: 0%;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10% 20%;
   }
 
   .box3-descripcion {
@@ -911,42 +914,62 @@ background: rgba(255,255,255,0.8);
     bottom: 0%;
     z-index: 1;
     height: 50%;
-    padding: 25px 40px 20px;
+    padding-top: 0%;
+    padding-right: 15%;
+    padding-left: 15%;
   }
 
   .box-iconos, .box-iconos2 {
     display: none;
   }
 
+  .carousel_productos {
+    height: 80%;
+  }
+
+  .box2-img-carousel {
+    position: absolute;
+    left: 30%;
+    top: 0%;
+    right: 10%;
+    bottom: 0%;
+    margin-right: 0%;
+    margin-left: 0%;
+  }
+
   .carousel-indicators {
-    height: 5px;
-    margin-top: 180px;
+    height: 15%;
+    margin-top: 0%;
+    padding-top: 20%;
     text-align: center;
   }
 
   .box3-logo, .box3-logo3 {
-    height: 50px;
-    padding-top: 0px;
-    padding-right: 40px;
-    padding-left: 40px;
+    height: 20%;
+    padding-top: 0%;
+    padding-bottom: 5%;
+    padding-right: 15%;
+    padding-left: 15%;
     text-align: center;
   }
 
   .box3-text {
-    height: 150px;
-    padding: 30px;
+    height: 50%;
+    padding: 5%;
+    font-size: 12px;
     text-align: center;
-    line-height: 1;
+    line-height: 12px;
   }
 
-  .box3-text p {
+  /*.box3-text p {
     padding-bottom: 5px;
-  }
+  }*/
 
   .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
-    height: 50px;
-    padding: 5px 20px;
-    line-height: 10px;
+    height: 10%;
+    padding-top: 0%;
+    padding-bottom: 5%;
+    /*line-height: 10px;*/
   }
 
 
