--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -657,7 +657,7 @@ background: rgba(255,255,255,0.8);
   }
 
   .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
-    display: block;
+    display: none;
   }
 
 }
@@ -704,6 +704,10 @@ background: rgba(255,255,255,0.8);
     margin-right: auto;
     margin-left: auto;
     padding-right: 8px;
+  }
+
+  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
+    display: none;
   }
 
 
@@ -885,13 +889,13 @@ background: rgba(255,255,255,0.8);
     color: white;
   }
 
-  .box1 {
+  .box1, .box4, .box6 {
     width: 100%;
     height: 100%;
     padding: 0px;
   }
 
-  .box2 {
+  .box2, .box5 {
     position: absolute;
     left: 0%;
     top: 0%;
@@ -906,7 +910,7 @@ background: rgba(255,255,255,0.8);
     padding: 10% 20%;
   }
 
-  .box3-descripcion {
+  .box3-descripcion, .box5-descripcion {
     position: absolute;
     left: 0%;
     top: auto;
@@ -919,7 +923,7 @@ background: rgba(255,255,255,0.8);
     padding-left: 15%;
   }
 
-  .box-iconos, .box-iconos2 {
+  .box-iconos, .box-iconos2, .box-iconos5 {
     display: none;
   }
 
@@ -944,34 +948,66 @@ background: rgba(255,255,255,0.8);
     text-align: center;
   }
 
-  .box3-logo, .box3-logo3 {
+  .box3-logo, .box3-logo3, .box5-logo, .box6-logo {
     height: 20%;
     padding-top: 0%;
     padding-bottom: 5%;
     padding-right: 15%;
-    padding-left: 15%;
+    padding-left: 5%;
     text-align: center;
   }
 
-  .box3-text {
+  .box3-text, .box3-text3 {
     height: 50%;
-    padding: 5%;
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
     font-size: 12px;
     text-align: center;
     line-height: 12px;
   }
 
-  /*.box3-text p {
-    padding-bottom: 5px;
-  }*/
-
-  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
-    height: 10%;
-    padding-top: 0%;
+  .box3-text4 {
+    height: 50%;
+    padding-top: 15%;
+    padding-left: 5%;
+    padding-right: 5%;
     padding-bottom: 5%;
-    /*line-height: 10px;*/
+    font-size: 12px;
+    text-align: center;
+    line-height: 12px;
   }
 
+  .box3-text4 p {
+    text-align: center;
+  }
+
+  #btn-novedades {
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
+  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
+    display: block;
+    height: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+  }
+
+  .box-iconos-responsive4 {
+    display: block;
+    height: 10%;
+    padding-top: 10%;
+    padding-bottom: 0%;
+
+  }
+
+  }
+  .list-inline-item {
+    display: inline-block;
+  }
 
 
 }
