--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -908,10 +908,11 @@ background: rgba(255,255,255,0.8);
     bottom: 0%;
     z-index: 1;
     height: 60%;
-    padding-top: 7%;
-    padding-right: 20%;
-    padding-left: 20%;
-    line-height: 25px;
+    padding-top: 15%;
+    padding-right: 22%;
+    padding-left: 23%;
+    font-size: large;
+    line-height: 20px;
     color: white;
     text-align: center;
   }
