--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -943,6 +943,10 @@ background: rgba(255,255,255,0.8);
     padding: 0% 20%;
   }
 
+  .box6 {
+    margin-top: -5%;
+  }
+
   .box3-descripcion, .box5-descripcion {
     position: absolute;
     left: 0%;
@@ -1057,6 +1061,19 @@ background: rgba(255,255,255,0.8);
     position: absolute;
     z-index: 15;
   }
+  
+  #box-fuerza2-2 {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    z-index: 1;
+    height: 55%;
+    padding-top: 0%;
+    padding-right: 15%;
+    padding-left: 15%;
+  }
 
   .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
     display: block;
@@ -1067,11 +1084,11 @@ background: rgba(255,255,255,0.8);
   }
 
   .box-iconos-responsive4 {
-    display: block;
+    position: absolute;
     height: 10%;
-    padding-top: 15%;
-    padding-bottom: 0%;
-
+    padding-top: 30%;
+    padding-left: 27%;
+    padding-bottom: 5%;
   }
 
   .list-inline-item {
