--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -46,7 +46,7 @@ height:100%
 	right: 0px;
 	width: 100%;
 	height:80px;
-	z-index: 10; 
+	z-index: 20; 
 
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #000), to(transparent));
   background-image: linear-gradient(180deg, #000 80%, transparent);
@@ -683,6 +683,7 @@ background: rgba(255,255,255,0.8);
 
   #menu-responsive {
     display: block;
+    background-color: #000;
   }
 
   .a-menu-res2 {
@@ -698,6 +699,8 @@ background: rgba(255,255,255,0.8);
 
   #ul-menu-res2 {
     display: none;
+    background-color: #000;
+    z-index: 20;
   }
 
   .li-menu-res2 {
@@ -708,6 +711,14 @@ background: rgba(255,255,255,0.8);
     background-color: #000;
     font-weight: bold;
     font-size: 14px;
+  }
+
+  .li-menu-res2 a{
+    color: white;
+  }
+
+  .li-menu-res2 a:hover{
+    color: white;
   }
 
   .my-container {
@@ -870,9 +881,9 @@ background: rgba(255,255,255,0.8);
   }
 
   .moto {
-    margin-top: 120px;
-    margin-left: -240px;
-    width: 600px;
+    margin-top: 70px;
+    margin-left: -200px;
+    width: 450px;
   }
 
   .text-box-y {
